--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,36 @@
-#wp-core-integrity
-{
-  margin: 20px 10px;
+#wp-core-integrity {
+    margin: 20px 10px;
+    clear: both;
+    float: left;
+    width: 95%;
 }
-#wp-core-integrity .integrity-results
-{
-  padding: 30px;
+
+#wp-core-integrity .integrity-results {
+    padding: 30px 0;
 }
-#wp-core-integrity p
-{
-  line-height: 24px;
+
+#wp-core-integrity p {
+    clear: both;
+    line-height: 24px;
 }
-#wp-core-integrity .padding-left
-{
-  padding-left: 10px;
+
+#wp-core-integrity .padding-left {
+    padding-left: 10px;
+}
+
+#wp-core-integrity h3 {
+    float: left;
+}
+
+#wp-core-integrity a.page-title-action {
+    float: left;
+    margin: 15px;
+}
+
+#wp-core-integrity .notice {
+    clear: both;
+}
+
+#wp-core-integrity form table th {
+    width: 40%;
 }
